2014-01-18  Quentin Mathe <quentin.mathe@gmail.com>

	* Source/NSObject.m (-respondsToSelector, 
	+instancesRespondToSelector:): Fixed to check +resolveInstanceMethod: and 
	+resolveClassMethod: as documented in Cocoa NSObject API.

2014-01-16  Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSScanner.m: Implement -scanInteger: by conditionally
	calling -scanInt: or -scanLongLong: based on the pointer size
	detected at configure time.

2014-01-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSKeyValueObserving.m:
	Path info lifetime fixups to avoid crashes of the kind reported
	by Mathias Bauer <mathias_bauer@gmx.net>

2014-01-14  Lubos Dolezel <lubos@dolezel.info>
	* Source/NSBundle.m:
	* Headers/Foundation/NSBundle.h: add -resourceURL

2014-01-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m:
	* Documentation/Base.gsdoc:
	Add GNUSTEP_DEVELOPER_DIR to allow definition of the native path
	to the msys/mingw development tools on windows.
	Also improve/fix lookup heuristics.

2014-01-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Revert last change to get -isAbsolutePath working
	on mingw again ... need to analyse startup problem.

2014-01-13  Marcus Mueller <znek@mulle-kybernetik.com>

	* Source/NSString.m: absolute paths on __MINGW__ can also start
	with "/" if GSPathHandlingRight() is YES, otherwise GNUstep config
	paths can't be used during startup.

2014-01-11  Marcus Mueller <znek@mulle-kybernetik.com>

	* Source/GSMDNSNetServices.m: minor fixes - does now properly compile
	on Windows, too.
	NOTE:
	If you want to link against Apple's Bonjour SDK on Windows, you have
	to convert the dnssd.lib from MSVC/__stdcall format to GCC/__cdecl
	and provide the result as libdns_sd.a. Also, DNSSD_API in dns_sd.h
	needs to be defined empty.

2014-01-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m: The NSDeveloperDirectory key is deprecated
	on OSX, but lets use it for the development system root.